add_password_change_endpoint
